# otus_onnx_model_serving

./: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: admin.py  auth.py  config.py  inference.py  logger.py  models.py  users.py
